--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		</dependency>
             
  
- 		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-		</dependency>
+ 	 	<dependency>  
+            <groupId>jstl</groupId>  
+            <artifactId>jstl</artifactId>  
+            <version>1.2</version>  
+            <scope>compile</scope>  
+        </dependency>  
  		
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -66,11 +67,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<scope>provided</scope>
 		</dependency>
 		
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>1.3</version>
-		</dependency>
+		</dependency> -->
             
   </dependencies>
 <build>
